sighting: limit editor/preview height, load both to speed up switching

--- a/app/components/document/render/document-render.html
+++ b/app/components/document/render/document-render.html
@@ -12,6 +12,6 @@
         <hr />
     </div>
 
-    <div ng-if="format().type == 'html'" class="document-{{format().name}}" ng-bind-html="content"></div>
-    <pre ng-if="format().type == 'osf' || format().type == 'plain'">{{content}}</pre>
+    <div ng-if="format().type == 'html'" class="output document-{{format().name}}" ng-bind-html="content"></div>
+    <pre ng-if="format().type == 'osf' || format().type == 'plain'"class="output">{{content}}</pre>
 </div>
