--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -22,7 +22,10 @@
 		<th>Shownoter</th>
 	</tr>
 	<tr ng-repeat="ep in (filterepisodes = (podcast.episodes | filter:hasPub()) | orderBy:'number':true)">
-		<td><a ui-sref="view-episode({ podcast: podcast.slug, number: ep.number })">{{ep.number}} <span ng-show="ep.title">- {{ep.title}}</span></a></td>
+		<td><a ui-sref="view-episode({ podcast: podcast.slug, number: ep.number })">
+			<span ng-hide="ep.title">Episode {{ep.number}}</span>
+			<span ng-show="ep.title">{{ep.title}}</span>
+		</a></td>
 		<td>{{ep.date | date:'medium'}}</td>
 		<td>{{getPub(ep).podcasters.length}}</td>
 		<td>{{getPub(ep).shownoters.length}}</td>
