Minor wording fixes

--- a/app/components/static/faq.html
+++ b/app/components/static/faq.html
@@ -58,11 +58,11 @@
 
 <h4 id="englisch">
 	Gibt es diese Plattform auch auf Englisch?<br />
-	<span lang="en">Is there an English version of this platform?</span>
+	<span lang="en"><em>Is there an English version of this platform?</em></span>
 </h4>
 <p>
-	Zurzeit nicht, nein. Wir halten euch auf dem Laufenden!<br />
-	<span lang="en">Currently, there isn't. But stay tuned!</span>
+	Zurzeit nicht, nein. Wir halten dich auf dem Laufenden!<br />
+	<span lang="en"><em>Currently, there isn't. But stay tuned!</em></span>
 </p>
 
 <h4 id="entwickeln">Kann ich dabei helfen, die shownot.es weiterzuentwickeln?</h4>
