add report button

--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -8,6 +8,7 @@
 		<h2>{{episode.podcast.title}} {{episode.number}}</h2>
 		<h3>{{episode.date | date:'medium'}}</h3>
 		<a href="{{currentUrl}}edit/">Bearbeiten</a>
+		<a class="statuslabel report" href="#">Problem melden</a>
 	</div>
 
 </div>
