add /privacy/ content

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -73,7 +73,7 @@
 
 <nav class="menu" ng-controller="SidebarSearchCrtl">
     <ul>
-        <li class="search" title="Suche">
+        <li class="search" title="Suchbegriff(e) eingeben und mit Enter bestätigen">
             <label for="search"><span class="icon-search"></span></label><!--
             --><input type="search"
                       id="search"
