--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -298,7 +298,7 @@ hr {
 	text-align: right;
 }
 .highlight {
-	background-color: #ffffcc;
+	background-color: #ffc;
 }
 .success {
 	color: #40a662;
