document-render: fix OSF

--- a/app/components/document/render/document-render.html
+++ b/app/components/document/render/document-render.html
@@ -13,5 +13,5 @@
     </div>
 
     <div ng-if="format().type == 'html'" class="output document-{{format().name}}" ng-bind-html="content"></div>
-    <pre ng-if="format().type == 'osf' || format().type == 'plain'"class="output">{{content}}</pre>
+    <pre ng-if="format().type == 'plain'"class="output">{{content}}</pre>
 </div>
