footer on all pages

--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -23,3 +23,5 @@
 </ul>
 
 <document-render document="doc" show-formats="true" publication="pub" refresh="pub === undefined"></document-render>
+
+<snotes-footer></snotes-footer>
