--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -40,13 +40,4 @@
 
 <p>Die meisten dieser Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>. &hearts;</p>
 
-<footer>
-
-	<ul>
-		<li><a href="/donate/">Spenden</a></li>
-		<li><a href="/rules/">Regeln</a></li>
-		<li><a href="/privacy/">Datenschutz</a></li>
-		<li><a href="/imprint/">Impressum</a></li>
-	</ul>
-
-</footer>
+<snotes-footer></snotes-footer>
