--- a/app/components/static/donate.html
+++ b/app/components/static/donate.html
@@ -22,3 +22,5 @@
 </ul>
 
 <p>Wenn du uns auf anderem Wege etwas zukommen lassen möchtest oder Feedback hast, kannst du uns gerne eine <a href="mailto:team@shownot.es">E-Mail</a> schicken.</p>
+
+<snotes-footer></snotes-footer>
