--- a/app/components/static/faq.html
+++ b/app/components/static/faq.html
@@ -117,19 +117,4 @@
 	Die lange: Wie du dich bei Shownotern bedankst, ist dir überlassen. Freiwillige Arbeit erfodert allerdings immer auch Motivation. Daher gehört mindestens die Erwähnung der Helfer zum guten Ton. Du kannst sie natürlich auch flattern oder ihnen kleine Aufmerksamkeiten zukommen lassen.
 </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<snotes-footer></snotes-footer>
