--- a/app/components/static/imprint.html
+++ b/app/components/static/imprint.html
@@ -24,3 +24,5 @@
 <h3>Urheberrecht</h3>
 
 <p>Alle veröffentlichten Textinhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a> (Public Domain Dedication / bedingungslose Lizenz). Andere Inhalte, insbesondere die Cover-Bilder, können davon abweichen.</p>
+
+<snotes-footer></snotes-footer>
