--- a/app/components/static/privacy.html
+++ b/app/components/static/privacy.html
@@ -38,3 +38,5 @@
 <p>Der Nutzer hat das Recht, auf Antrag unentgeltlich Auskunft zu erhalten über die personenbezogenen Daten, die über ihn gespeichert wurden. Zusätzlich hat der Nutzer das Recht auf Berichtigung unrichtiger Daten, Sperrung und Löschung seiner personenbezogenen Daten, soweit dem keine gesetzliche Aufbewahrungspflicht entgegensteht.</p>
 
 <p>Der Text basiert auf dem <a href="datenschutz-generator.de">Datenschutz-Generator</a> von Rechtsanwalt Thomas Schwenke.</p>
+
+<snotes-footer></snotes-footer>
