--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -15,3 +15,5 @@
 <div class="archive">
     <archivebox ng-repeat="pod in podcasts" pod="pod"></archivebox>
 </div>
+
+<snotes-footer></snotes-footer>
