--- a/app/components/static/rules.html
+++ b/app/components/static/rules.html
@@ -25,3 +25,5 @@
 </ol>
 
 <p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="/faq">häufig gestellten Fragen</a>.</p>
+
+<snotes-footer></snotes-footer>
