--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -57,7 +57,7 @@
                   title-field="title"
                   minlength="1"></angucomplete-alt>
 
-<p>Die letzten Episodennummern in diesem Podcast waren: <b>133</b>, <b>51</b> und <b>61</b>.</p>
+<p>Die letzten Episodennummern in diesem Podcast waren: <number-list numbers="nonlive.oldNumbers"></number-list>.</p>
 <label for="episode">Episode:</label> <input type="text" id="episode" ng-model="nonlive.number">
 
 <input type="button" value="Erstellen" ng-click="createNonLive()">
