--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -74,7 +74,7 @@
 	<div class="box-wrapper">
 		<h3>Episodennummer</h3>
 		<p>
-			Die letzten Episodennummern in diesem Podcast waren: <b>133</b>, <b>51</b> und <b>61</b>.
+			Die letzten Episodennummern in diesem Podcast waren: <number-list numbers="oldNumbers"></number-list>.
 		</p>
 		<div class="input-group">
 			<input ng-model="epnumber" type="text" />
