--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -71,6 +71,21 @@
     </ul>
 </nav>
 
+<nav class="migrateWarning ng-cloak" ng-hide="!$root.currentUser || $root.currentUser.migrated">
+    <ul>
+        <li>
+            <!-- ich schau grässlich aus. mach mich schön <3 -->
+            <h3>Achtung!</h3>
+            <p>
+                Dein Account ist noch nicht auf die neue Platform umgezogen.
+            </p>
+            <p>
+                Um diese Seite vollständig nutzen zu können, <a href="/user/upgrade/">erledige das bitte</a>.
+            </p>
+        </li>
+    </ul>
+</nav>
+
 <nav class="menu" ng-controller="SidebarSearchCrtl">
     <ul>
         <li class="search" title="Suchbegriff(e) eingeben und mit Enter bestätigen">
