--- a/app/components/user/upgrade/upgrade.html
+++ b/app/components/user/upgrade/upgrade.html
@@ -16,6 +16,9 @@
 			<label for="checkrules-upgrade">Ich akzeptiere die <a href="/rules">Regeln</a>.</label>
 		</div>
 		<input type="submit" value="Speichern und fortfahren" ng-click="doUpgrade()" />
+        <action-status  success-text=""
+                        fail-text="Bitte überprüfe noch einmal deine Angaben."
+                        active="upgradeStatus.active" status="upgradeStatus.status"></action-status>
 	</form>
 </div>
 
