--- a/app/components/user/upgrade/upgrade.html
+++ b/app/components/user/upgrade/upgrade.html
@@ -22,4 +22,4 @@
 	</form>
 </div>
 
-<p>Bei Unklarheiten kannst du einen Blick auf die <a href="#">häufig gestellten Fragen</a> werfen.</p>
+<p>Bei Unklarheiten kannst du einen Blick auf die <a href="/faq/">häufig gestellten Fragen</a> werfen.</p>
