--- a/app/components/static/imprint.html
+++ b/app/components/static/imprint.html
@@ -1,28 +1,33 @@
 <h2>Impressum</h2>
 <h3>Gemäß § 5 TMG</h3>
 
-<p><em>Hinweis:</em> Für generelle Supportanfragen ist die <a href="/community">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href="https://twitter.com/DieShownotes">Twitter</a>- und <a href="https://alpha.app.net/shownotes">App.net</a>-Account.</p>
+<p><strong>Hinweis:</strong> Für generelle Supportanfragen ist die <a href="/community">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href="https://twitter.com/DieShownotes">Twitter</a>- und <a href="https://alpha.app.net/shownotes">App.net</a>-Account.</p>
 
 <h3>Anschrift</h3>
 
 <p>
-	Shownotes e.V.<br />
+	shownot.es<br />
 	c/o Evita Bley<br />
 	Poststraße 33<br />
 	01159 Dresden
 </p>
-
 <p>Von unangekündigten Besuchen raten wir ab.</p>
 
 <h3>Kontakt</h3>
 
 <p>
 	E-Mail-Adresse: <a href="mailto:team@shownot.es">team@shownot.es</a><br />
-	(Telefonnummer auf Anfrage.)
+	Telefonnummer: 030 / 555 795 69
 </p>
+<p>Kontaktanfragen via E-Mail werden bevorzugt.</p>
 
 <h3>Urheberrecht</h3>
 
-<p>Alle veröffentlichten Textinhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a> (Public Domain Dedication / bedingungslose Lizenz). Andere Inhalte, insbesondere die Cover-Bilder, können davon abweichen.</p>
+<p>Alle veröffentlichten Textinhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a> (<em><q>Public Domain Dedication</q></em>, bedingungslose Lizenz). Andere Inhalte, insbesondere die Cover-Bilder, können davon abweichen.</p>
+
+<h3>Sonstiges</h3>
+
+<p>Diese Seite basiert auf Open-Source-Software wie <a href="https://angularjs.org">AngularJS</a>, <a href="https://www.djangoproject.com">Django</a> und <a href="etherpad.org">Etherpad</a>.</p>
+<p><a href="https://uberspace.de/"><img src="images/uberspace-badge.png" alt="shownot.es wird von Uberspace gehostet" /></a></p>
 
 <snotes-footer></snotes-footer>
