--- a/app/components/static/rules.html
+++ b/app/components/static/rules.html
@@ -8,7 +8,7 @@
 		Ein guter Umgangston ist selbstverständlich. Bei Unklarheiten darf jederzeit nachgefragt werden.
 	</li>
 	<li>
-		<strong>Sendungsnotiten werden gewissenhaft mitgeschrieben.</strong><br />
+		<strong>Sendungsnotizen werden gewissenhaft mitgeschrieben.</strong><br />
 		Inhalte dürfen nicht absichtlich verfälscht werden.
 	</li>
 	<li>
