fix iconlists, delete paypal text

--- a/app/components/static/donate.html
+++ b/app/components/static/donate.html
@@ -9,14 +9,7 @@
 		<span class="icon-flattr"></span>
 		<div>
 			<h3>Flattr</h3>
-			<p>Das Konzept hinter <a href="https://flattr.com/profile/shownotes">Flattr</a> ist schnell erklärt: Ein fester Betrag, der gleichmäßig auf alle geflatterten Projekte aufgeteilt wird. 10 % davon geben wir monatlich an Gebühren ab. Wir freuen uns über jeden Klick auf einen unserer Buttons: <!-- Button folgt --></p>
-		</div>
-	</li>
-	<li>
-		<span class="icon-paypal"></span>
-		<div>
-			<h3>PayPal</h3>
-			<p>Auch über <a href="#">PayPal</a> kannst du die Plattform unterstützen. Die Gebühren hier betragen etwa 3 bis 4 %.</p>
+			<p>Das Konzept hinter <a href="https://flattr.com/profile/shownotes">Flattr</a> ist schnell erklärt: Ein fester Betrag, der gleichmäßig auf alle geflatterten Projekte aufgeteilt wird. 10 % davon geben wir monatlich an Gebühren ab. Wir freuen uns über jeden Klick auf einen unserer Buttons: <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://shownot.es/"></a></p>
 		</div>
 	</li>
 </ul>
