add mailman link

--- a/app/components/static/community.html
+++ b/app/components/static/community.html
@@ -7,7 +7,7 @@
 		<span class="icon-mail"></span>
 		<div>
 			<h3>Mailingliste</h3>
-			<p>Unsere öffentliche <a href="#">Mailingliste</a> bietet die Möglichkeit zum Austausch von Shownotern und Podcastern.</p>
+			<p>Unsere öffentliche <a href="http://lists.shownot.es/cgi-bin/mailman/listinfo/mailman">Mailingliste</a> bietet die Möglichkeit zum Austausch von Shownotern und Podcastern.</p>
 		</div>
 	</li>
 	<li>
