remove checkbox labels

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -50,9 +50,9 @@
                                value=""
                                title="Wiederhole dein Passwort" />
                     </div>
-                    <div class="form-input">
+                    <!--<div class="form-input">
                         <p>Ich akzeptiere die <a href="/rules/">Regeln</a>.</p>
-                    </div>
+                    </div>-->
                     <p class="pwreset" ng-show="loginform.errors.loginfailed">Hast du dein <a href="#" ng-click="requestPwReset()">Passwort vergessen</a>?</p>
                     <p ng-show="pwresetdone">Überprüfe dein E-Mail-Postfach.</p>
                     <div class="form-button">
