--- a/app/components/user/upgrade/upgrade.html
+++ b/app/components/user/upgrade/upgrade.html
@@ -11,10 +11,10 @@
 	<form class="form-wrapper">
 		<input type="password" value="" placeholder="Neues Passwort" ng-model="upgrade.password" />
 		<input type="password" value="" placeholder="Neues Passwort bestätigen" ng-model="upgrade.password2" equals="{{upgrade.password}}" />
-		<div class="form-check">
+		<!--<div class="form-check">
 			<input id="checkrules-upgrade" type="checkbox" value="checkrules" ng-model="upgrade.rules" />
 			<label for="checkrules-upgrade">Ich akzeptiere die <a href="/rules">Regeln</a>.</label>
-		</div>
+		</div>-->
 		<input type="submit" value="Speichern und fortfahren" ng-click="doUpgrade()" />
         <action-status  success-text=""
                         fail-text="Bitte überprüfe noch einmal deine Angaben."
