doc-edit: hide userlist

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -49,7 +49,7 @@
 
 	<div class="chat">
 
-		<div class="userlist">
+		<!--<div class="userlist">
 			<h3><span class="icon-users"></span> Jetzt online: 3</h3>
 			<ul>
 				<li>
@@ -65,7 +65,7 @@
 					<span class="icon-close ban" title="Mitglied sperren"></span>
 				</li>
 			</ul>
-		</div>
+		</div>-->
 
 		<div class="chatmsgs">
 			<p ng-repeat="msg in chatmessages" style="background-color: #{{msg.issuer.color}}">
