archive faq link

--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -1,6 +1,6 @@
 <h2>Sendungen</h2>
 
-<p>In diesem Archiv sind alle Podcasts aufgeführt, für die auf <em>shownot.es</em> bereits Sendungsnotizen erstellt wurden. <a href="#">Wie kommt mein Podcast auf diese Liste?</a></p>
+<p>In diesem Archiv sind alle Podcasts aufgeführt, für die auf <em>shownot.es</em> bereits Sendungsnotizen erstellt wurden. <a href="/faq/">Wie kommt mein Podcast auf diese Liste?</a></p>
 
 <h3>Kürzlich erstellt für</h3>
 
