--- a/app/components/static/imprint.html
+++ b/app/components/static/imprint.html
@@ -16,7 +16,7 @@
 <h3>Kontakt</h3>
 
 <p>
-	E-Mail-Adresse: <a href="mailto:team@shownot.es">team@shownot.es</a><br />
+	E-Mail-Adresse: <a href="mailto:intern@shownot.es">intern@shownot.es</a><br />
 	Telefonnummer: 030 / 555 795 69
 </p>
 <p>Kontaktanfragen via E-Mail werden bevorzugt.</p>
