Fixed links to socialmedia Profiles - related to #30

--- a/app/components/publicprofile/publicprofile.html
+++ b/app/components/publicprofile/publicprofile.html
@@ -26,9 +26,9 @@
 	</div>
 
 	<ul class="profile">
-		<li data-social="Flattr" ng-show="user.socials['flattr']"><a href="#" title="{{user.username}} auf Flattr">{{user.socials['flattr']}}</a></li>
-		<li data-social="Twitter" ng-show="user.socials['twitter']"><a href="#" title="{{user.username}} auf Twitter">{{user.socials['twitter']}}</a></li>
-		<li data-social="App.net" ng-show="user.socials['appnet']"><a href="#" title="{{user.username}} auf App.net">{{user.socials['appnet']}}</a></li>
+		<li data-social="Flattr" ng-show="user.socials['flattr']"><a href="https://flattr.com/profile/{{user.socials['flattr']}}" title="{{user.username}} auf Flattr">{{user.socials['flattr']}}</a></li>
+		<li data-social="Twitter" ng-show="user.socials['twitter']"><a href="https://twitter.com/{{user.socials['twitter']}}" title="{{user.username}} auf Twitter">{{user.socials['twitter']}}</a></li>
+		<li data-social="App.net" ng-show="user.socials['appnet']"><a href="https://alpha.app.net/{{user.socials['appnet']}}" title="{{user.username}} auf App.net">{{user.socials['appnet']}}</a></li>
 	</ul>
 
 </div>
